<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Family</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="welcome">Bienvenue dans votre application ! :-)</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>
