<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_rules"
    android:orientation="vertical" >

     <ImageView
        android:id="@+id/android_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_content_description" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/black_color"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
         android:layout_marginTop="20dp" >
         
         <TextView
             
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"

             android:text="@string/email"
             android:textColor="@color/white_color"
             android:textSize="@dimen/normal_text_size" />

         <EditText
             android:id="@+id/user_email"
             android:layout_width="274dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@color/white_color"
             android:inputType="textEmailAddress" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
            
             android:paddingTop="@dimen/normal_padding"
             android:text="@string/password"
             android:textColor="@color/white_color"
             android:textSize="@dimen/normal_text_size" />

         <EditText
             android:id="@+id/user_password"
             android:layout_width="274dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@color/white_color"
             android:inputType="textPassword" />
         
     </LinearLayout>
	
    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/connect"
        android:onClick="Connect" />
    
    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/create_account" />

</LinearLayout>